Added redis image, container and updated notes and settings.py

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
 version: '3.8'
 
 services:
+
+  redis:
+    image: redis:7.0.11-alpine
+
   django:
     container_name: django
     build:
@@ -14,3 +18,18 @@ services:
       - DEBUG=1
       - SECRET_KEY='django-insecure-a^yf81h#2a++3n$zg!hb)w#*o!z2a&e@ck+1r1sm02o*%*^v7-'
       - ALLOWED_HOSTS=localhost,127.0.0.1
+    depends_on:
+      - redis
+
+  celery:
+    container_name: celery
+    build:
+      context: ./django_celery
+    volumes:
+      - ./django_celery:usr/src/app/
+    environment:
+      - DEBUG=1
+      - SECRET_KEY='django-insecure-a^yf81h#2a++3n$zg!hb)w#*o!z2a&e@ck+1r1sm02o*%*^v7-'
+      - ALLOWED_HOSTS=localhost,127.0.0.1
+    depends_on:
+      - redis
