--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       context: ./django_celery
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./django_celery:usr/src/app/
+      - ./django_celery/django_celery:usr/src/app/
     ports:
       - 8001:8000
     environment:
@@ -26,7 +26,7 @@ services:
     build:
       context: ./django_celery
     volumes:
-      - ./django_celery:usr/src/app/
+      - ./django_celery/django_celery:usr/src/app/
     environment:
       - DEBUG=1
       - SECRET_KEY='django-insecure-a^yf81h#2a++3n$zg!hb)w#*o!z2a&e@ck+1r1sm02o*%*^v7-'
