--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,12 @@ services:
       context: ./django_celery
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./django_celery/django_celery:usr/src/app/
+      - ./django_celery:/usr/src/app
     ports:
-      - 8001:8000
+      - "8001:8000"
     environment:
       - DEBUG=1
-      - SECRET_KEY='django-insecure-a^yf81h#2a++3n$zg!hb)w#*o!z2a&e@ck+1r1sm02o*%*^v7-'
+      - SECRET_KEY=django-insecure-a^yf81h#2a++3n$zg!hb)w#*o!z2a&e@ck+1r1sm02o*%*^v7-
       - ALLOWED_HOSTS=localhost,127.0.0.1
     depends_on:
       - redis
@@ -25,11 +25,12 @@ services:
     container_name: celery
     build:
       context: ./django_celery
+    command: celery --app=django_celery worker -l INFO
     volumes:
-      - ./django_celery/django_celery:usr/src/app/
+      - ./django_celery:/usr/src/app
     environment:
       - DEBUG=1
-      - SECRET_KEY='django-insecure-a^yf81h#2a++3n$zg!hb)w#*o!z2a&e@ck+1r1sm02o*%*^v7-'
+      - SECRET_KEY="django-insecure-a^yf81h#2a++3n$zg!hb)w#*o!z2a&e@ck+1r1sm02o*%*^v7-"
       - ALLOWED_HOSTS=localhost,127.0.0.1
     depends_on:
       - redis
