Added standalone celery worker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - redis
 
   celery:
-    container_name: celery
+    container_name: celery1
     build:
       context: ./django_celery
     command: celery --app=django_celery worker -l INFO
@@ -34,3 +34,16 @@ services:
       - ALLOWED_HOSTS=localhost,127.0.0.1
     depends_on:
       - redis
+      - django
+
+  celery2:
+    container_name: celery2
+    build:
+      context: ./celeryworker
+      dockerfile: Dockerfile
+    command: celery --app celerytask worker -l INFO
+    volumes:
+      - ./celeryworker:/usr/src/app
+    depends_on:
+      - redis
+      - django
