--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     container_name: celery1
     build:
       context: ./django_celery
-    command: celery --app=django_celery worker -l INFO
+    command: celery --app=django_celery worker -l INFO -Q celery,celery:1,celery:2,celery:3
     volumes:
       - ./django_celery:/usr/src/app
     environment:
@@ -36,14 +36,15 @@ services:
       - redis
       - django
 
-  celery2:
-    container_name: celery2
-    build:
-      context: ./celeryworker
-      dockerfile: Dockerfile
-    command: celery --app celerytask worker -l INFO
-    volumes:
-      - ./celeryworker:/usr/src/app
-    depends_on:
-      - redis
-      - django
+  # celery2:
+  #   container_name: celery2
+  #   build:
+  #     context: ./celeryworker
+  #     dockerfile: Dockerfile
+  #   command: celery -A celerytask worker --loglevel=INFO -Q queue2
+
+  #   volumes:
+  #     - ./celeryworker:/usr/src/app
+  #   depends_on:
+  #     - redis
+  #     - django
